Actions
Bug #10769
closedksocket: NULL pointer errors
Start date:
2019-04-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
ksocket: NULL pointer errors:
../../common/io/ksocket/ksocket.c: In function 'ksocket_spoll': ../../common/io/ksocket/ksocket.c:844:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] pdp->pd_fd = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 28ec64d9ac03d17ce922c30274d804b981cda66e
commit 28ec64d9ac03d17ce922c30274d804b981cda66e Author: Toomas Soome <tsoome@me.com> Date: 2019-04-24T06:30:19.000Z 10769 ksocket: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions